--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         h1, h2 {
             text-align: center;
         }
-        .experience, .education, .skills, .contact {
+        .experience, .education, .skills, .sample, .contact {
             margin-bottom: 2rem;
         }
         .job, .edu-item {
@@ -125,10 +125,10 @@
     <h2>Sample Success </h2>
     <p>Here are some of the images and projects I’ve worked on:</p>
 
-    <img src="/description/image1.jpg" alt="Project Image 1">
+    <img src="~/description/image1.jpg" alt="Project Image 1">
     <p>Create a new group with a limited number of users and set the conditions for this group to only allow those users to edit the unit price on the sales quotation. Other users can see the unit price, but not adapt it.</p>
 
-    <img src="/description/image2.jpg" alt="Project Image 2">
+    <img src="~/description/image2.jpg" alt="Project Image 2">
     <p>A new group needs to be created so that only certain users can create, adapt or delete analytic accounts.
         All other users should be able to add an analytic account on SO, Invoice, PO or vendor Bill. But , not create, adapt or delete them.
     </p>
