--- a/index.html
+++ b/index.html
@@ -145,6 +145,6 @@
 <footer>
     <p>© 2024 Nwe Ni Ei Kyaw. All rights reserved.</p>
 </footer>
-
+<script src="script.js"></script> 
 </body>
 </html>
