--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                    <!--<li class="nav__item"><a href="#work" class="nav__link">Portfolio</a></li>-->
-                        <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li> 
+                        <li class="nav__item"><a href="#work" class="nav__link">Portfolio</a></li>
+                        <!--<li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>-->
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
@@ -40,7 +40,8 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Nwe Ni Ei Kyaw</span><br> Odoo Developer and Functional Support</h1>
+                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Nwe Ni Ei Kyaw</span><br> Odoo Developer <br>
+                        and Functional Support</h1>
 
                     <a href="#contact" class="button">Hire me</a>
                 </div>
