--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Nwe Ni Ei Kyaw</span><br> Odoo Developer <br>
-                        and Functional Support</h1>
+                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Nwe Ni Ei Kyaw</span><br> Odoo Developer<br>
+                        & Functional Support</h1>
 
                     <a href="#contact" class="button">Hire me</a>
                 </div>
@@ -49,7 +49,7 @@
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/nwe-ni-ei-kyaw-9092a976/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://github.com/Sokehpwar" class="home__social-icon"><i class='bx bxl-github' ></i></a>
-                    <a href="https://github.com/Sokehpwar/portfolio/pdf/Resume_NweNiEiKyaw.pdf" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://github.com/Sokehpwar/portfolio/pdf/Resume_NweNiEiKyaw.pdf" class="home__social-icon"><i class='bx bxl-paperclip' ></i></a>
                 </div>
 
                 <div class="home__img">
