--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/nwe-ni-ei-kyaw-9092a976/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://github.com/Sokehpwar" class="home__social-icon"><i class='bx bxl-github' ></i></a>
-                    <a href="https://github.com/Sokehpwar/portfolio/pdf/Resume_NweNiEiKyaw.pdf" class="home__social-icon"><i class='bx bxl-paperclip' ></i></a>
+                    <a href="https://github.com/Sokehpwar/portfolio/pdf/Resume_NweNiEiKyaw.pdf" class="home__social-icon"><img src="assets/img/bx--paperclip.svg" alt="angular" width="50" /></i></a>
                 </div>
 
                 <div class="home__img">
@@ -112,7 +112,7 @@
                                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnRW9ooon2t8fhS_SBJfc8XS8nvkS4sveecQ&usqp=CAU" alt="angular" width="30" height="40" />&nbsp;
                                 
                                 <span class="skills__name">Data Visualization :&nbsp;</span>
-                                <a href="https://www.microsoft.com/en-us/power-platform/products/power-bi" target="_blank" rel="noreferrer"> <img src="assets/img/power-biwerbi.png" alt="angular" width="30" height="40" /> </a>
+                                <a href="https://www.microsoft.com/en-us/power-platform/products/power-bi" target="_blank" rel="noreferrer"> <img src="assets/img/powerbi.png" alt="angular" width="30" height="40" /> </a>
                                 <a href="gds" target="_blank" rel="noreferrer"> <img src="https://www.logo.wine/a/logo/Microsoft_Excel/Microsoft_Excel-Logo.wine.svg" alt="angular" width="64" /> </a>
                                 
                             </div>
