--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Nwe Ni Ei Kyaw</span><br> Odoo Developer<br>
                         & Functional Support</h1>
 
-                    <a href="#contact" class="button">Hire me</a>
+                    <a href="https://github.com/Sokehpwar/portfolio/pdf/Resume_NweNiEiKyaw.pdf" class="button">Hire me</a>
                 </div>
 
                 <div class="home__social">
@@ -112,7 +112,7 @@
                                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnRW9ooon2t8fhS_SBJfc8XS8nvkS4sveecQ&usqp=CAU" alt="angular" width="30" height="40" />&nbsp;
                                 
                                 <span class="skills__name">Data Visualization :&nbsp;</span>
-                                <a href="https://www.microsoft.com/en-us/power-platform/products/power-bi" target="_blank" rel="noreferrer"> <img src="assets/img/powerbi.png" alt="angular" width="30" height="40" /> </a>
+                                <a href="https://www.microsoft.com/en-us/power-platform/products/power-bi" target="_blank" rel="noreferrer"> <img src="assets/img/powerbi.png" alt="angular" width="64" /> </a>
                                 <a href="gds" target="_blank" rel="noreferrer"> <img src="https://www.logo.wine/a/logo/Microsoft_Excel/Microsoft_Excel-Logo.wine.svg" alt="angular" width="64" /> </a>
                                 
                             </div>
