--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/nwe-ni-ei-kyaw-9092a976/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://github.com/Sokehpwar" class="home__social-icon"><i class='bx bxl-github' ></i></a>
-                    <a href="https://github.com/Sokehpwar/portfolio/blob/main/assets/pdf/Resume_NweNiEiKyaw.pdf" class="home__social-icon"><img src="assets/img/bx--paperclip.svg" alt="angular" width="50" /></i></a>
+<!--                     <a href="https://github.com/Sokehpwar/portfolio/blob/main/assets/pdf/Resume_NweNiEiKyaw.pdf" class="home__social-icon"><img src="assets/img/bx--paperclip.svg" alt="angular" width="50" /></i></a> -->
                 </div>
 
                 <div class="home__img">
@@ -126,7 +126,7 @@
                                 
                                 <span class="skills__name">Database Technologies :</span>
                                  <a href="https://www.postgresql.org/" target="_blank" rel="noreferrer"> <img src="assets/img/postgres-icon-24.jpg" alt="angular" width="70" height="40" /> </a>&nbsp;
-                                <a href="" target="_blank" rel="noreferrer"> <img src="assets/img/mssql.png" alt="angular" width="40" height="40" /> </a>&nbsp;
+                                <a href="" target="_blank" rel="noreferrer"> <img src="assets/img/mssql.png" alt="angular" width="70"/> </a>&nbsp;
                                 
                             </div>
                             <div class="skills__bar skills__js">
