--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">Shivam</p>
+            <p class="footer__title">Nwe Ni Ei Kyaw</p>
             <div class="footer__social">
                 <a href="https://www.linkedin.com/in/nwe-ni-ei-kyaw-9092a976" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://github.com/Sokehpwar" class="footer__icon"><i class='bx bxl-github' ></i></a>
